# llama3_finetune_inference

./: .gitignore  README.md  main.py  pyproject.toml
llm_finetune/: finetune-llama3.py  finetune_dataset.txt  finetune_gpt2.py
llm_inference/: llama-3-8b-instruct.py  llama-nur-inference.py
