[tool.poetry]
name = "llm-inference"
version = "0.1.0"
description = ""
authors = ["Roland Abou Younes <roland@abouyounes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
tensorflow = "^2.16.1"
tf-keras = "^2.16.0"
sentencepiece = "^0.2.0"
accelerate = "^0.29.3"
gpt-2-simple = "^0.8.1"
deepspeed = "^0.14.2"
datasets = "^2.19.0"


[tool.poetry.group.dev.dependencies]
poetry-dotenv-plugin = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
